# esl

./: .gitignore  .travis.yml  CMakeLists.txt  ISSUE_TEMPLATE.md  README.md
.circleci/: config.yml
containers/: README.md  error_functions.hpp  ring_buffer.hpp  static_vector.hpp  test.cpp
delegate/: README.md  delegate.hpp  delegate_helper.hpp  test.cpp
helpers/: singleton.hpp
scripts/: make_gtest_circleci.sh  run_clangformat.sh  style_checker.sh  whitespace_checker.sh
src/containers/: static_vector.hpp
src/esl/: esl.hpp
src/esl/callable/: README.md  delegate.hpp  delegate_helper.hpp  function.hpp  function_view.hpp
src/esl/callable/old/: delegate_helper.hpp  delegate_old.hpp
src/esl/containers/: README.md  allocate.hpp  allocator.hpp  ring_buffer.hpp  ring_buffer2.hpp  static_vector.hpp  test.cpp
src/esl/delegate/: README.md  delegate.hpp  delegate_new.hpp  test.cpp  test2.cpp
src/esl/helpers/: README.md  error_functions.hpp  feature_defs.hpp  flag_enum.hpp  singleton.hpp  unsafe_flag.hpp  utils.hpp
src/esl/math/: README.md  quaternion.hpp  vector.hpp
test/: CMakeLists.txt
test/src/: test_delegate.cpp  test_delegate_new.cpp  test_flag_enum.cpp  test_function.cpp  test_function_view.cpp  test_least_integer.cpp  test_quaternion.cpp  test_repeat.cpp  test_ring_buffer.cpp  test_singleton.cpp  test_static_vector.cpp  test_unsafe_flag.cpp  test_vector.cpp
